@@ -1,40 +1,10 @@
-/*
- * ShibAuthentication.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3713 $
- *
- * Copyright (c) 2009, The DSpace Foundation.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- * 
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- * 
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
-
 package org.dspace.authenticate;
 
 import java.sql.SQLException;
@@ -62,7 +32,7 @@ import org.dspace.eperson.Group;
  * 
  * @author <a href="mailto:bliong@melcoe.mq.edu.au">Bruc Liong, MELCOE</a>
  * @author <a href="mailto:kli@melcoe.mq.edu.au">Xiang Kevin Li, MELCOE</a>
- * @version $Revision: 3713 $
+ * @version $Revision: 5844 $
  */
 public class ShibAuthentication implements AuthenticationMethod
 {
@@ -72,22 +42,24 @@ public class ShibAuthentication implements AuthenticationMethod
     public int authenticate(Context context, String username, String password,
             String realm, HttpServletRequest request) throws SQLException
     {
+        if (request == null)
+        {
+            return BAD_ARGS;
+        }
         log.info("Shibboleth login started...");
 
         java.util.Enumeration names = request.getHeaderNames();
         String name;
         while (names.hasMoreElements())
-            log.debug("header:" + (name = names.nextElement().toString()) + "="
-                    + request.getHeader(name));
+        {
+            name = names.nextElement().toString();
+            log.debug("header:" + name + "=" + request.getHeader(name));
+        }
 
-        boolean isUsingTomcatUser = ConfigurationManager
-                .getBooleanProperty("authentication.shib.email-use-tomcat-remote-user");
-        String emailHeader = ConfigurationManager
-                .getProperty("authentication.shib.email-header");
-        String fnameHeader = ConfigurationManager
-                .getProperty("authentication.shib.firstname-header");
-        String lnameHeader = ConfigurationManager
-                .getProperty("authentication.shib.lastname-header");
+        boolean isUsingTomcatUser = ConfigurationManager.getBooleanProperty("authentication.shib.email-use-tomcat-remote-user");
+        String emailHeader = ConfigurationManager.getProperty("authentication.shib.email-header");
+        String fnameHeader = ConfigurationManager.getProperty("authentication.shib.firstname-header");
+        String lnameHeader = ConfigurationManager.getProperty("authentication.shib.lastname-header");
 
         String email = null;
         String fname = null;
@@ -100,7 +72,9 @@ public class ShibAuthentication implements AuthenticationMethod
 
             // fail, try lower case
             if (email == null)
+            {
                 email = request.getHeader(emailHeader.toLowerCase());
+            }
         }
 
         // try to pull the "REMOTE_USER" info instead of the header
@@ -115,7 +89,9 @@ public class ShibAuthentication implements AuthenticationMethod
         {
             EPerson p = context.getCurrentUser();
             if (p != null)
+            {
                 email = p.getEmail();
+            }
         }
 
         if (email == null)
@@ -134,7 +110,9 @@ public class ShibAuthentication implements AuthenticationMethod
 
             // fail, try lower case
             if (fname == null)
+            {
                 fname = request.getHeader(fnameHeader.toLowerCase());
+            }
         }
         if (lnameHeader != null)
         {
@@ -143,7 +121,9 @@ public class ShibAuthentication implements AuthenticationMethod
 
             // fail, try lower case
             if (lname == null)
+            {
                 lname = request.getHeader(lnameHeader.toLowerCase());
+            }
         }
 
         // future version can offer auto-update feature, this needs testing
@@ -176,9 +156,13 @@ public class ShibAuthentication implements AuthenticationMethod
                 eperson = EPerson.create(context);
                 eperson.setEmail(email);
                 if (fname != null)
+                {
                     eperson.setFirstName(fname);
+                }
                 if (lname != null)
+                {
                     eperson.setLastName(lname);
+                }
                 eperson.setCanLogIn(true);
                 AuthenticationManager.initEPerson(context, request, eperson);
                 eperson.update();
@@ -204,6 +188,8 @@ public class ShibAuthentication implements AuthenticationMethod
         {
             // the person exists, just return ok
             context.setCurrentUser(eperson);
+            request.getSession().setAttribute("shib.authenticated",
+                    Boolean.TRUE);
         }
 
         return AuthenticationMethod.SUCCESS;
@@ -216,7 +202,13 @@ public class ShibAuthentication implements AuthenticationMethod
      */
     public int[] getSpecialGroups(Context context, HttpServletRequest request)
     {
-
+        // no user logged in or user not logged from shibboleth
+        if (request == null || context.getCurrentUser() == null
+                || request.getSession().getAttribute("shib.authenticated") == null)
+        {
+            return new int[0];
+        }
+                
         if (request.getSession().getAttribute("shib.specialgroup") != null)
         {
             return (int[]) request.getSession().getAttribute(
@@ -229,12 +221,16 @@ public class ShibAuthentication implements AuthenticationMethod
         boolean roleHeader_ignoreScope = ConfigurationManager
                 .getBooleanProperty("authentication.shib.role-header.ignore-scope");
         if (roleHeader == null || roleHeader.trim().length() == 0)
-            roleHeader = "Shib-EP-UnscopedAffiliation"; // fall back to default
+        {
+            roleHeader = "Shib-EP-UnscopedAffiliation";
+        } // fall back to default
         String affiliations = request.getHeader(roleHeader);
 
         // try again with all lower case...maybe has better luck
         if (affiliations == null)
+        {
             affiliations = request.getHeader(roleHeader.toLowerCase());
+        }
 
         // default role when fully authN but not releasing any roles?
         String defaultRoles = ConfigurationManager
@@ -256,32 +252,43 @@ public class ShibAuthentication implements AuthenticationMethod
                 // strip scope if present and roleHeader_ignoreScope
                 if (roleHeader_ignoreScope) 
                 {
-                        int index = affiliation.indexOf("@");
-                        if (index != -1) affiliation = affiliation.substring(0,index);
+                        int index = affiliation.indexOf('@');
+                        if (index != -1)
+                        {
+                            affiliation = affiliation.substring(0, index);
+                        }
                 }
 
                 // perform mapping here if necessary
                 String groupLabels = ConfigurationManager
                         .getProperty("authentication.shib.role." + affiliation);
                 if (groupLabels == null || groupLabels.trim().length() == 0)
+                {
                     groupLabels = ConfigurationManager
                             .getProperty("authentication.shib.role."
                                     + affiliation.toLowerCase());
+                }
 
                 // revert back to original entry when no mapping is provided
                 if (groupLabels == null)
+                {
                     groupLabels = affiliation;
+                }
 
                 String[] labels = groupLabels.split(",");
                 for (int i = 0; i < labels.length; i++)
+                {
                     addGroup(groups, context, labels[i].trim());
+                }
             }
         }
 
         int ids[] = new int[groups.size()];
         java.util.Iterator it = groups.iterator();
         for (int i = 0; it.hasNext(); i++)
+        {
             ids[i] = ((Integer) it.next()).intValue();
+        }
 
         // store the special group, if already transformed from headers
         // since subsequent header may not have the values anymore
@@ -305,11 +312,11 @@ public class ShibAuthentication implements AuthenticationMethod
                 log.warn(LogManager.getHeader(context, dspaceGroup
                         + " group is not found!! Admin needs to create one!",
                         "requiredGroup=" + dspaceGroup));
-                groups.add(new Integer(0));
+                groups.add(Integer.valueOf(0));
             }
             else
             {
-                groups.add(new Integer(g.getID()));
+                groups.add(Integer.valueOf(g.getID()));
             }
             log.info("Mapping group: " + dspaceGroup + " to groupID: "
                     + (g == null ? 0 : g.getID()));
@@ -361,7 +368,7 @@ public class ShibAuthentication implements AuthenticationMethod
      *            DSpace context
      * @param request
      *            HTTP request, in case anything in that is used to decide
-     * @param email
+     * @param username
      *            e-mail address of user attempting to register
      * 
      */
