@@ -1,48 +1,18 @@
-/*
- * BrowseDAOOracle.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3705 $
- *
- * Date: $Date: 2009-04-11 19:02:24 +0200 (Sat, 11 Apr 2009) $
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.browse;
 
+import java.io.Serializable;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.apache.commons.lang.ArrayUtils;
 import org.apache.log4j.Logger;
 import org.dspace.core.Context;
 import org.dspace.core.LogManager;
@@ -99,6 +69,8 @@ public class BrowseDAOOracle implements BrowseDAO
     /** value to restrict browse to (e.g. author name) */
     private String value = null;
 
+    private String authority = null;
+
     /** exact or partial matching of the value */
     private boolean valuePartial = false;
 
@@ -132,8 +104,8 @@ public class BrowseDAOOracle implements BrowseDAO
     // administrative attributes for this class
 
     /** a cache of the actual query to be executed */
-    private String    querySql    = "";
-    private ArrayList queryParams = new ArrayList();
+    private String querySql    = "";
+    private List<Serializable> queryParams = new ArrayList<Serializable>();
 
     private String whereClauseOperator = "";
 
@@ -210,7 +182,7 @@ public class BrowseDAOOracle implements BrowseDAO
         {
             String query = "SELECT MAX(" + column + ") AS max_value FROM " + table + " WHERE item_id=?";
 
-            Object[] params = { new Integer(itemID) };
+            Object[] params = { Integer.valueOf(itemID) };
             tri = DatabaseManager.query(context, query, params);
 
             TableRow row;
@@ -246,11 +218,13 @@ public class BrowseDAOOracle implements BrowseDAO
         TableRowIterator tri = null;
 
         if (column == null || value == null)
+        {
             return 0;
+        }
 
         try
         {
-            List paramsList = new ArrayList();
+            List<Serializable> paramsList = new ArrayList<Serializable>();
             StringBuffer queryBuf = new StringBuffer();
 
             queryBuf.append("COUNT(").append(column).append(") AS offset ");
@@ -309,7 +283,7 @@ public class BrowseDAOOracle implements BrowseDAO
 
         try
         {
-            List paramsList = new ArrayList();
+            List<Serializable> paramsList = new ArrayList<Serializable>();
             StringBuffer queryBuf = new StringBuffer();
 
             queryBuf.append("COUNT(").append(column).append(") AS offset ");
@@ -361,7 +335,7 @@ public class BrowseDAOOracle implements BrowseDAO
     /* (non-Javadoc)
      * @see org.dspace.browse.BrowseDAO#doQuery()
      */
-    public List doQuery() throws BrowseException
+    public List<BrowseItem> doQuery() throws BrowseException
     {
         String query = getQuery();
         Object[] params = getQueryParams();
@@ -378,7 +352,7 @@ public class BrowseDAOOracle implements BrowseDAO
             tri = DatabaseManager.query(context, query, params);
 
             // go over the query results and process
-            List results = new ArrayList();
+            List<BrowseItem> results = new ArrayList<BrowseItem>();
             while (tri.hasNext())
             {
                 TableRow row = tri.next();
@@ -407,7 +381,7 @@ public class BrowseDAOOracle implements BrowseDAO
     /* (non-Javadoc)
      * @see org.dspace.browse.BrowseDAO#doValueQuery()
      */
-    public List doValueQuery() throws BrowseException
+    public List<String[]> doValueQuery() throws BrowseException
     {
         String query = getQuery();
         Object[] params = getQueryParams();
@@ -425,12 +399,13 @@ public class BrowseDAOOracle implements BrowseDAO
             tri = DatabaseManager.query(context, query, params);
 
             // go over the query results and process
-            List results = new ArrayList();
+            List<String[]> results = new ArrayList<String[]>();
             while (tri.hasNext())
             {
                 TableRow row = tri.next();
-                String stringResult = row.getStringColumn("value");
-                results.add(stringResult);
+                String valueResult = row.getStringColumn("value");
+                String authorityResult = row.getStringColumn("authority");
+                results.add(new String[]{valueResult,authorityResult});
             }
 
             return results;
@@ -478,7 +453,7 @@ public class BrowseDAOOracle implements BrowseDAO
      */
     public String[] getCountValues()
     {
-        return this.countValues;
+        return (String[]) ArrayUtils.clone(this.countValues);
     }
 
     /* (non-Javadoc)
@@ -526,7 +501,7 @@ public class BrowseDAOOracle implements BrowseDAO
      */
     public String[] getSelectValues()
     {
-        return selectValues;
+        return (String[]) ArrayUtils.clone(selectValues);
     }
 
     /* (non-Javadoc)
@@ -610,7 +585,7 @@ public class BrowseDAOOracle implements BrowseDAO
      */
     public void setCountValues(String[] fields)
     {
-        this.countValues = fields;
+        this.countValues = (String[]) ArrayUtils.clone(fields);
         this.rebuildQuery = true;
     }
 
@@ -682,7 +657,7 @@ public class BrowseDAOOracle implements BrowseDAO
      */
     public void setSelectValues(String[] selectValues)
     {
-        this.selectValues = selectValues;
+        this.selectValues = (String[]) ArrayUtils.clone(selectValues);
         this.rebuildQuery = true;
     }
 
@@ -762,7 +737,7 @@ public class BrowseDAOOracle implements BrowseDAO
      * @return      the query to be executed
      * @throws BrowseException
      */
-    private String buildDistinctQuery(List params) throws BrowseException
+    private String buildDistinctQuery(List<Serializable> params) throws BrowseException
     {
         StringBuffer queryBuf = new StringBuffer();
 
@@ -802,7 +777,7 @@ public class BrowseDAOOracle implements BrowseDAO
      * @return      the query to be executed
      * @throws BrowseException
      */
-    private String buildQuery(List params) throws BrowseException
+    private String buildQuery(List<Serializable> params) throws BrowseException
     {
         StringBuffer queryBuf = new StringBuffer();
 
@@ -872,7 +847,7 @@ public class BrowseDAOOracle implements BrowseDAO
      * LIMIT [limit]
      * </code>
      */
-    private void buildRowLimitAndOffset(StringBuffer queryBuf, List params)
+    private void buildRowLimitAndOffset(StringBuffer queryBuf, List<Serializable> params)
     {
         // prepare the LIMIT clause
         if (limit > 0 || offset > 0)
@@ -885,16 +860,20 @@ public class BrowseDAOOracle implements BrowseDAO
         {
             queryBuf.append("rec WHERE rownum<=? ");
             if (offset > 0)
-                params.add(new Integer(limit + offset));
+            {
+                params.add(Integer.valueOf(limit + offset));
+            }
             else
-                params.add(new Integer(limit));
+            {
+                params.add(Integer.valueOf(limit));
+            }
         }
 
         if (offset > 0)
         {
             queryBuf.insert(0, "SELECT * FROM (");
             queryBuf.append(") WHERE rnum>?");
-            params.add(new Integer(offset));
+            params.add(Integer.valueOf(offset));
         }
     }
 
@@ -904,39 +883,48 @@ public class BrowseDAOOracle implements BrowseDAO
      * @param queryBuf
      * @param params
      */
-    private void buildFocusedSelectClauses(StringBuffer queryBuf, List params)
+    private void buildFocusedSelectClauses(StringBuffer queryBuf, List<Serializable> params)
     {
         if (tableMap != null && tableDis != null)
         {
             queryBuf.append(tableMap).append(".distinct_id=").append(tableDis).append(".id");
             queryBuf.append(" AND ");
-            queryBuf.append(tableDis).append(".sort_value");
-
-            if (valuePartial)
+            if (authority == null)
             {
-                queryBuf.append(" LIKE ? ");
-
-                if (valueField.startsWith("sort_"))
+                queryBuf.append(tableDis).append(".authority IS NULL");
+                queryBuf.append(" AND ");
+                queryBuf.append(tableDis).append(".").append(valueField);
+                if (valuePartial)
                 {
-                    params.add("%" + utils.truncateSortValue(value) + "%");
+                    queryBuf.append(" LIKE ? ");
+
+                    if (valueField.startsWith("sort_"))
+                    {
+                        params.add("%" + utils.truncateSortValue(value) + "%");
+                    }
+                    else
+                    {
+                        params.add("%" + utils.truncateValue(value) + "%");
+                    }
                 }
                 else
                 {
-                    params.add("%" + utils.truncateValue(value) + "%");
+                    queryBuf.append("=? ");
+
+                    if (valueField.startsWith("sort_"))
+                    {
+                        params.add(utils.truncateSortValue(value));
+                    }
+                    else
+                    {
+                        params.add(utils.truncateValue(value));
+                    }
                 }
             }
             else
             {
-                queryBuf.append("=? ");
-
-                if (valueField.startsWith("sort_"))
-                {
-                    params.add(utils.truncateSortValue(value));
-                }
-                else
-                {
-                    params.add(utils.truncateValue(value));
-                }
+                queryBuf.append(tableDis).append(".authority=?");
+                params.add(utils.truncateValue(authority,100));
             }
         }
 
@@ -945,7 +933,9 @@ public class BrowseDAOOracle implements BrowseDAO
             if (tableMap != null)
             {
                 if (tableDis != null)
+                {
                     queryBuf.append(" AND ");
+                }
 
                 queryBuf.append(tableMap).append(".item_id=")
                         .append(containerTable).append(".item_id AND ");
@@ -954,7 +944,7 @@ public class BrowseDAOOracle implements BrowseDAO
             queryBuf.append(containerTable).append(".").append(containerIDField);
             queryBuf.append("=? ");
 
-            params.add(new Integer(containerID));
+            params.add(Integer.valueOf(containerID));
         }
     }
 
@@ -973,12 +963,16 @@ public class BrowseDAOOracle implements BrowseDAO
         if (tableMap != null)
         {
             if (containerTable != null)
+            {
                 queryBuf.append(", ");
+            }
 
             queryBuf.append(tableMap);
 
             if (tableDis != null)
+            {
                 queryBuf.append(", ").append(tableDis);
+            }
         }
     }
 
@@ -1060,13 +1054,17 @@ public class BrowseDAOOracle implements BrowseDAO
      * SELECT [arguments] FROM [table]
      * </code>
      */
-    private void buildSelectStatement(StringBuffer queryBuf, List params) throws BrowseException
+    private void buildSelectStatement(StringBuffer queryBuf, List<Serializable> params) throws BrowseException
     {
         if (queryBuf.length() == 0)
+        {
             throw new BrowseException("No arguments for SELECT statement");
+        }
 
         if (table == null || "".equals(table))
+        {
             throw new BrowseException("No table for SELECT statement");
+        }
 
         // queryBuf already contains what we are selecting,
         // so insert the statement at the beginning
@@ -1078,7 +1076,14 @@ public class BrowseDAOOracle implements BrowseDAO
         if (containerTable != null || (value != null && valueField != null && tableDis != null && tableMap != null))
         {
             queryBuf.append(", (SELECT ");
-            queryBuf.append(containerTable != null ? containerTable : tableMap).append(".item_id");
+            if (containerTable != null)
+            {
+                queryBuf.append(containerTable).append(".item_id");
+            }
+            else
+            {
+                queryBuf.append("DISTINCT ").append(tableMap).append(".item_id");
+            }
             queryBuf.append(" FROM ");
             buildFocusedSelectTables(queryBuf);
             queryBuf.append(" WHERE ");
@@ -1099,7 +1104,7 @@ public class BrowseDAOOracle implements BrowseDAO
      * @param queryBuf  the string value obtained from distinctClause, countClause or selectValues
      * @return  the SELECT part of the query
      */
-    private void buildSelectStatementDistinct(StringBuffer queryBuf, List params) throws BrowseException
+    private void buildSelectStatementDistinct(StringBuffer queryBuf, List<Serializable> params) throws BrowseException
     {
         if (queryBuf.length() == 0)
         {
@@ -1145,7 +1150,7 @@ public class BrowseDAOOracle implements BrowseDAO
      * If either of focusClause or valueClause is null, they will be duly omitted from
      * the WHERE clause.
      */
-    private void buildWhereClauseDistinctConstraints(StringBuffer queryBuf, List params)
+    private void buildWhereClauseDistinctConstraints(StringBuffer queryBuf, List<Serializable> params)
     {
         // add the constraint to community or collection if necessary
         // and desired
@@ -1171,7 +1176,7 @@ public class BrowseDAOOracle implements BrowseDAO
      * If either of focusClause or valueClause is null, they will be duly omitted from
      * the WHERE clause.
      */
-    private void buildWhereClauseFullConstraints(StringBuffer queryBuf, List params)
+    private void buildWhereClauseFullConstraints(StringBuffer queryBuf, List<Serializable> params)
     {
         // add the constraint to community or collection if necessary
         // and desired
@@ -1199,7 +1204,7 @@ public class BrowseDAOOracle implements BrowseDAO
      * sort_value <= 'my text'
      * </code>
      */
-    private void buildWhereClauseJumpTo(StringBuffer queryBuf, List params)
+    private void buildWhereClauseJumpTo(StringBuffer queryBuf, List<Serializable> params)
     {
         // get the operator (<[=] | >[=]) which the focus of the browse will
         // be matched using
@@ -1242,7 +1247,7 @@ public class BrowseDAOOracle implements BrowseDAO
      * sort_value = 'some author'
      * </code>
      */
-    private void buildWhereClauseFilterValue(StringBuffer queryBuf, List params)
+    private void buildWhereClauseFilterValue(StringBuffer queryBuf, List<Serializable> params)
     {
         // assemble the value clause if we are to have one
         if (value != null && valueField != null)
@@ -1380,5 +1385,13 @@ public class BrowseDAOOracle implements BrowseDAO
         }
 
         return queryParams.toArray();
+    }
+
+    public void setAuthorityValue(String value) {
+        authority = value;
+    }
+
+    public String getAuthorityValue() {
+        return authority;
     }
 }
