@@ -1,37 +1,9 @@
-/*
- * ItemCountDAOPostgres.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Copyright (c) 2002-2007, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.browse;
 
@@ -100,17 +72,17 @@ public class ItemCountDAOPostgres implements ItemCountDAO
         try
 		{
 			// first find out if we have a record
-			Object[] sparams = { new Integer(collection.getID()) };
+			Object[] sparams = { Integer.valueOf(collection.getID()) };
 			tri = DatabaseManager.query(context, collectionSelect, sparams);
 			
 			if (tri.hasNext())
 			{
-				Object[] params = { new Integer(count), new Integer(collection.getID()) };
+				Object[] params = { Integer.valueOf(count), Integer.valueOf(collection.getID()) };
 				DatabaseManager.updateQuery(context, collectionUpdate, params);
 			}
 			else
 			{
-				Object[] params = { new Integer(collection.getID()), new Integer(count) };
+				Object[] params = { Integer.valueOf(collection.getID()), Integer.valueOf(count) };
 				DatabaseManager.updateQuery(context, collectionInsert, params);
 			}
 		}
@@ -122,7 +94,9 @@ public class ItemCountDAOPostgres implements ItemCountDAO
         finally
         {
             if (tri != null)
+            {
                 tri.close();
+            }
         }
     }
 
@@ -140,17 +114,17 @@ public class ItemCountDAOPostgres implements ItemCountDAO
         try
 		{
 			// first find out if we have a record
-			Object[] sparams = { new Integer(community.getID()) };
+			Object[] sparams = { Integer.valueOf(community.getID()) };
 			tri = DatabaseManager.query(context, communitySelect, sparams);
 			
 			if (tri.hasNext())
 			{
-				Object[] params = { new Integer(count), new Integer(community.getID()) };
+				Object[] params = { Integer.valueOf(count), Integer.valueOf(community.getID()) };
 				DatabaseManager.updateQuery(context, communityUpdate, params);
 			}
 			else
 			{
-				Object[] params = { new Integer(community.getID()), new Integer(count) };
+				Object[] params = { Integer.valueOf(community.getID()), Integer.valueOf(count) };
 				DatabaseManager.updateQuery(context, communityInsert, params);
 			}
 		}
@@ -162,7 +136,9 @@ public class ItemCountDAOPostgres implements ItemCountDAO
         finally
         {
             if (tri != null)
+            {
                 tri.close();
+            }
         }
     }
 
@@ -235,7 +211,7 @@ public class ItemCountDAOPostgres implements ItemCountDAO
 	{
 		try
 		{
-			Object[] params = { new Integer(collection.getID()) };
+			Object[] params = { Integer.valueOf(collection.getID()) };
 			DatabaseManager.updateQuery(context, collectionRemove, params);
 		}
 		catch (SQLException e)
@@ -256,7 +232,7 @@ public class ItemCountDAOPostgres implements ItemCountDAO
 	{
 		try
 		{
-			Object[] params = { new Integer(community.getID()) };
+			Object[] params = { Integer.valueOf(community.getID()) };
 			DatabaseManager.updateQuery(context, communityRemove, params);
 		}
 		catch (SQLException e)
@@ -279,7 +255,7 @@ public class ItemCountDAOPostgres implements ItemCountDAO
         TableRowIterator tri = null;
         try
 		{
-			Object[] params = { new Integer(collection.getID()) };
+			Object[] params = { Integer.valueOf(collection.getID()) };
 			tri = DatabaseManager.query(context, collectionSelect, params);
 			
 			if (!tri.hasNext())
@@ -304,7 +280,9 @@ public class ItemCountDAOPostgres implements ItemCountDAO
         finally
         {
             if (tri != null)
+            {
                 tri.close();
+            }
         }
     }
 	
@@ -321,7 +299,7 @@ public class ItemCountDAOPostgres implements ItemCountDAO
         TableRowIterator tri = null;
         try
 		{
-			Object[] params = { new Integer(community.getID()) };
+			Object[] params = { Integer.valueOf(community.getID()) };
 			tri = DatabaseManager.query(context, communitySelect, params);
 			
 			if (!tri.hasNext())
@@ -346,7 +324,9 @@ public class ItemCountDAOPostgres implements ItemCountDAO
         finally
         {
             if (tri != null)
+            {
                 tri.close();
+            }
         }
     }
 }
