@@ -1,35 +1,9 @@
-/*
- * Copyright (c) 2004-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.checker;
 
@@ -59,13 +33,13 @@ public class HandleDispatcher implements BitstreamDispatcher
     private static final Logger LOG = Logger.getLogger(HandleDispatcher.class);
 
     /** Handle to retrieve bitstreams from. */
-    String handle = null;
+    private String handle = null;
 
     /** Has the type of object the handle refers to been determined. */
-    Boolean init = Boolean.FALSE;
+    private boolean init = false;
 
     /** the delegate to dispatch to. */
-    ListDispatcher delegate = null;
+    private ListDispatcher delegate = null;
 
     /**
      * Database access for retrieving bitstreams
@@ -77,7 +51,6 @@ public class HandleDispatcher implements BitstreamDispatcher
      */
     private HandleDispatcher()
     {
-        ;
     }
 
     /**
@@ -100,7 +73,7 @@ public class HandleDispatcher implements BitstreamDispatcher
      */
     private synchronized void init()
     {
-        if (init == Boolean.FALSE)
+        if (!init)
         {
             Context context = null;
             int dsoType = -1;
@@ -118,7 +91,7 @@ public class HandleDispatcher implements BitstreamDispatcher
             catch (SQLException e)
             {
                 LOG.error("init error " + e.getMessage(), e);
-                throw new RuntimeException("init error" + e.getMessage(), e);
+                throw new IllegalStateException("init error" + e.getMessage(), e);
 
             }
             finally
@@ -130,12 +103,12 @@ public class HandleDispatcher implements BitstreamDispatcher
                 }
             }
 
-            List ids = new ArrayList();
+            List<Integer> ids = new ArrayList<Integer>();
 
             switch (dsoType)
             {
             case Constants.BITSTREAM:
-                ids.add(new Integer(id));
+                ids.add(Integer.valueOf(id));
                 break;
 
             case Constants.ITEM:
@@ -152,7 +125,7 @@ public class HandleDispatcher implements BitstreamDispatcher
             }
 
             delegate = new ListDispatcher(ids);
-            init = Boolean.TRUE;
+            init = true;
         }
     }
 
@@ -163,7 +136,7 @@ public class HandleDispatcher implements BitstreamDispatcher
      */
     public int next()
     {
-        if (init == Boolean.FALSE)
+        if (!init)
         {
             init();
         }
