@@ -1,50 +1,20 @@
-/*
- * ItemComparator.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3705 $
- *
- * Date: $Date: 2009-04-11 19:02:24 +0200 (Sat, 11 Apr 2009) $
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.content;
 
+import java.io.Serializable;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
+import org.apache.commons.lang.builder.HashCodeBuilder;
 import org.dspace.sort.OrderFormat;
 
 /**
@@ -56,9 +26,9 @@ import org.dspace.sort.OrderFormat;
  * the maximum or minimum lexicographic value will be used.
  * 
  * @author Peter Breton
- * @version $Revision: 3705 $
+ * @version $Revision: 5844 $
  */
-public class ItemComparator implements Comparator
+public class ItemComparator implements Comparator, Serializable
 {
     /** Dublin Core element */
     private String element;
@@ -126,19 +96,19 @@ public class ItemComparator implements Comparator
         String firstValue = getValue((Item) first);
         String secondValue = getValue((Item) second);
 
-        if ((firstValue == null) && (secondValue == null))
+        if (firstValue == null && secondValue == null)
         {
             return 0;
         }
 
-        if ((firstValue != null) && (secondValue == null))
-        {
-            return 1;
-        }
-
-        if ((firstValue == null) && (secondValue != null))
+        if (firstValue == null)
         {
             return -1;
+        }
+
+        if (secondValue == null)
+        {
+            return 1;
         }
 
         // See the javadoc for java.lang.String for an explanation
@@ -164,28 +134,28 @@ public class ItemComparator implements Comparator
 
         ItemComparator other = (ItemComparator) obj;
 
-        return _equals(element, other.element)
-                && _equals(qualifier, other.qualifier)
-                && _equals(language, other.language) && (max == other.max);
+        return equalsWithNull(element, other.element)
+                && equalsWithNull(qualifier, other.qualifier)
+                && equalsWithNull(language, other.language) && (max == other.max);
+    }
+
+    public int hashCode()
+    {
+        return new HashCodeBuilder().append(element).append(qualifier).append(language).append(max).toHashCode();
     }
 
     /**
      * Return true if the first string is equal to the second. Either or both
      * may be null.
      */
-    private boolean _equals(String first, String second)
+    private boolean equalsWithNull(String first, String second)
     {
-        if ((first == null) && (second == null))
+        if (first == null && second == null)
         {
             return true;
         }
 
-        if ((first != null) && (second == null))
-        {
-            return false;
-        }
-
-        if ((first == null) && (second != null))
+        if (first == null || second == null)
         {
             return false;
         }
@@ -220,7 +190,7 @@ public class ItemComparator implements Comparator
 
         // We want to sort using Strings, but also keep track of
         // which DCValue the value came from.
-        Map values = new HashMap();
+        Map<String, Integer> values = new HashMap<String, Integer>();
 
         for (int i = 0; i < dcvalues.length; i++)
         {
@@ -228,7 +198,7 @@ public class ItemComparator implements Comparator
 
             if (value != null)
             {
-                values.put(value, new Integer(i));
+                values.put(value, Integer.valueOf(i));
             }
         }
 
@@ -237,11 +207,11 @@ public class ItemComparator implements Comparator
             return null;
         }
 
-        Set valueSet = values.keySet();
-        String chosen = max ? (String) Collections.max(valueSet)
-                : (String) Collections.min(valueSet);
+        Set<String> valueSet = values.keySet();
+        String chosen = max ? Collections.max(valueSet)
+                : Collections.min(valueSet);
 
-        int index = ((Integer) values.get(chosen)).intValue();
+        int index = (values.get(chosen)).intValue();
 
         return normalizeTitle(dcvalues[index]);
     }
