@@ -1,41 +1,9 @@
-/*
- * CommunityListServlet.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3705 $
- *
- * Date: $Date: 2009-04-11 19:02:24 +0200 (Sat, 11 Apr 2009) $
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.webui.servlet;
 
@@ -62,7 +30,7 @@ import org.dspace.core.LogManager;
  * Servlet for listing communities (and collections within them)
  * 
  * @author Robert Tansley
- * @version $Revision: 3705 $
+ * @version $Revision: 5845 $
  */
 public class CommunityListServlet extends DSpaceServlet
 {
@@ -79,10 +47,10 @@ public class CommunityListServlet extends DSpaceServlet
         Map topcommMap = new HashMap();
 
         // This will map community IDs to arrays of collections
-        Map colMap = new HashMap();
+        Map<Integer, Collection[]> colMap = new HashMap<Integer, Collection[]>();
 
         // This will map communityIDs to arrays of sub-communities
-        Map commMap = new HashMap();
+        Map<Integer, Community[]> commMap = new HashMap<Integer, Community[]>();
 
         CommunityGroup[] groups = CommunityGroup.findAll(context);
         for (int k=0; k < groups.length; k++) {
@@ -93,7 +61,7 @@ public class CommunityListServlet extends DSpaceServlet
 
         for (int com = 0; com < communities.length; com++)
         {
-            Integer comID = new Integer(communities[com].getID());
+            Integer comID = Integer.valueOf(communities[com].getID());
 
             // Find collections in community
             Collection[] colls = communities[com].getCollections();
@@ -110,7 +78,7 @@ public class CommunityListServlet extends DSpaceServlet
         if (AuthorizeManager.isAdmin(context))
         {
             // set a variable to create an edit button
-            request.setAttribute("admin_button", new Boolean(true));
+            request.setAttribute("admin_button", Boolean.TRUE);
         }
 
         request.setAttribute("groups", groups);
