@@ -1,43 +1,10 @@
-/*
- * GroupListServlet.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3705 $
- *
- * Date: $Date: 2009-04-11 19:02:24 +0200 (Sat, 11 Apr 2009) $
- *
- * Copyright (c) 2002, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
-
 package org.dspace.app.webui.servlet.admin;
 
 import java.io.IOException;
@@ -56,7 +23,7 @@ import org.dspace.eperson.Group;
 /**
  * Servlet browsing through groups and selecting them
  *
- *  * @version $Revision: 3705 $
+ *  * @version $Revision: 5845 $
  */
 public class GroupListServlet extends DSpaceServlet
 {
@@ -80,18 +47,21 @@ public class GroupListServlet extends DSpaceServlet
 		
 		// What's the index of the first group to show?  Default is 0
 		int first = UIUtil.getIntParameter(request, "first");
-		if (first == -1) first = 0;
+		if (first == -1)
+        {
+            first = 0;
+        }
 
 		// Retrieve the e-people in the specified order
 		Group[] groups = Group.findAll(context, sortBy);
 		
 		// Set attributes for JSP
-		request.setAttribute("sortby", new Integer(sortBy));
-		request.setAttribute("first",  new Integer(first));
+		request.setAttribute("sortby", Integer.valueOf(sortBy));
+		request.setAttribute("first",  Integer.valueOf(first));
 		request.setAttribute("groups", groups);
 		if (multiple)
 		{
-			request.setAttribute("multiple", new Boolean(true));
+			request.setAttribute("multiple", Boolean.TRUE);
 		}
 		
 		JSPManager.showJSP(request, response, "/tools/group-select-list.jsp");
