@@ -1,41 +1,9 @@
-/*
- * ItemMapServlet.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3705 $
- *
- * Date: $Date: 2009-04-11 19:02:24 +0200 (Sat, 11 Apr 2009) $
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.webui.servlet.admin;
 
@@ -65,7 +33,7 @@ import java.util.Map;
 /**
  * Servlet for editing and deleting (expunging) items
  * 
- * @version $Revision: 3705 $
+ * @version $Revision: 5845 $
  */
 public class ItemMapServlet extends DSpaceServlet
 {
@@ -120,9 +88,9 @@ public class ItemMapServlet extends DSpaceServlet
     		// also holds for interruption by pressing 'Cancel'
     		int count_native = 0; // # of items owned by this collection
     		int count_import = 0; // # of virtual items
-    		Map myItems = new HashMap(); // # for the browser
-    		Map myCollections = new HashMap(); // collections for list
-    		Map myCounts = new HashMap(); // counts for each collection
+    		Map<Integer, Item> myItems = new HashMap<Integer, Item>(); // # for the browser
+    		Map<Integer, Collection> myCollections = new HashMap<Integer, Collection>(); // collections for list
+    		Map<Integer, Integer> myCounts = new HashMap<Integer, Integer>(); // counts for each collection
     		
     		// get all items from that collection, add them to a hash
     		ItemIterator i = myCollection.getItems();
@@ -136,7 +104,7 @@ public class ItemMapServlet extends DSpaceServlet
                     Item myItem = i.next();
 
                     // get key for hash
-                    Integer myKey = new Integer(myItem.getID());
+                    Integer myKey = Integer.valueOf(myItem.getID());
 
                     if (myItem.isOwningCollection(myCollection))
                     {
@@ -149,21 +117,21 @@ public class ItemMapServlet extends DSpaceServlet
 
                     // is the collection in the hash?
                     Collection owningCollection = myItem.getOwningCollection();
-                    Integer cKey = new Integer(owningCollection.getID());
+                    Integer cKey = Integer.valueOf(owningCollection.getID());
 
                     if (myCollections.containsKey(cKey))
                     {
-                        Integer x = (Integer) myCounts.get(cKey);
+                        Integer x = myCounts.get(cKey);
                         int myCount = x.intValue() + 1;
 
                         // increment count for that collection
-                        myCounts.put(cKey, new Integer(myCount));
+                        myCounts.put(cKey, Integer.valueOf(myCount));
                     }
                     else
                     {
                         // store and initialize count
                         myCollections.put(cKey, owningCollection);
-                        myCounts.put(cKey, new Integer(1));
+                        myCounts.put(cKey, Integer.valueOf(1));
                     }
 
                     // store the item
@@ -173,18 +141,20 @@ public class ItemMapServlet extends DSpaceServlet
             finally
             {
                 if (i != null)
+                {
                     i.close();
+                }
             }
             
             // remove this collection's entry because we already have a native
     		// count
-    		myCollections.remove(new Integer(myCollection.getID()));
+    		myCollections.remove(Integer.valueOf(myCollection.getID()));
     		
     		// sort items - later
     		// show page
     		request.setAttribute("collection", myCollection);
-    		request.setAttribute("count_native", new Integer(count_native));
-    		request.setAttribute("count_import", new Integer(count_import));
+    		request.setAttribute("count_native", Integer.valueOf(count_native));
+    		request.setAttribute("count_import", Integer.valueOf(count_import));
     		request.setAttribute("items", myItems);
     		request.setAttribute("collections", myCollections);
     		request.setAttribute("collection_counts", myCounts);
@@ -198,102 +168,43 @@ public class ItemMapServlet extends DSpaceServlet
     		// show the page
     		JSPManager.showJSP(request, response, jspPage);
     	}
-    	/*
-    	 * else if( action.equals("add") ) { int itemID =
-    	 * UIUtil.getIntParameter(request, "item_id"); String handle =
-    	 * (String)request.getParameter("handle"); boolean error = true; Item
-    	 * itemToAdd = null;
-    	 * 
-    	 * if( itemID > 0 ) { itemToAdd = Item.find(context, itemID);
-    	 * 
-    	 * if( itemToAdd != null ) error = false; } else if(handle != null &&
-    	 * !handle.equals("")) { DSpaceObject
-    	 * dso=HandleManager.resolveToObject(context, handle);
-    	 * 
-    	 * if(dso != null && dso.getType() == Constants.ITEM) { itemToAdd =
-    	 * (Item)dso; error = false; } }
-    	 * 
-    	 * //FIXME: error handling! if( !error ) { String myTitle =
-    	 * itemToAdd.getDC("title",null,Item.ANY)[0].value; String ownerName =
-    	 * itemToAdd.getOwningCollection().getMetadata("name");
-    	 *  // hook up item, but first, does it belong already? TableRowIterator
-    	 * tri = DatabaseManager.query(context, "collection2item", "SELECT
-    	 * collection2item.* FROM collection2item WHERE " + "collection_id=" +
-    	 * myCollection.getID() + " AND item_id=" + itemToAdd.getID());
-    	 * 
-    	 * if(tri.hasNext()) { request.setAttribute("message", "Item is already
-    	 * part of that collection!"); } else { // Create mapping
-    	 * myCollection.addItem( itemToAdd );
-    	 *  // set up a nice 'done' message request.setAttribute("message",
-    	 * "Item added successfully: <br> " + myTitle + " <br> From Collection:
-    	 * <br> " + ownerName);
-    	 *  }
-    	 * 
-    	 * request.setAttribute("collection", myCollection);
-    	 *  // show this page when we're done jspPage = "itemmap-info.jsp";
-    	 *  // show the page JSPManager.showJSP(request, response, jspPage); }
-    	 * else { // Display an error } } else if( action.equals("Add Entire
-    	 * Collection") ) { int targetID = UIUtil.getIntParameter(request,
-    	 * "collection2import");
-    	 * 
-    	 * Collection targetCollection = Collection.find(context, targetID);
-    	 *  // get all items from that collection and add them if not // already
-    	 * added
-    	 *  // get all items to be added ItemIterator i =
-    	 * targetCollection.getItems(); Map toAdd = new HashMap(); String
-    	 * message = "";
-    	 * 
-    	 * while( i.hasNext() ) { Item myItem = i.next();
-    	 * 
-    	 * toAdd.put(new Integer(myItem.getID()), myItem); }
-    	 *  // now see what we already have, removing dups from the 'toAdd' list
-    	 * i = myCollection.getItems();
-    	 * 
-    	 * while( i.hasNext() ) { Item myItem = i.next(); Integer myKey = new
-    	 * Integer(myItem.getID());
-    	 *  // remove works even if key isn't present toAdd.remove(myKey); }
-    	 *  // what's left in toAdd should be added Iterator addKeys =
-    	 * toAdd.keySet().iterator();
-    	 * 
-    	 * while( addKeys.hasNext() ) { Item myItem =
-    	 * (Item)toAdd.get(addKeys.next()); myCollection.addItem(myItem);
-    	 * message += " <br> Added item ID: " + myItem.getID(); }
-    	 * 
-    	 * request.setAttribute("message", message);
-    	 * request.setAttribute("collection", myCollection);
-    	 *  // show this page when we're done jspPage = "itemmap-info.jsp";
-    	 *  // show the page JSPManager.showJSP(request, response, jspPage); }
-    	 */
     	else if (action.equals("Remove"))
     	{
     		// get item IDs to remove
     		String[] itemIDs = request.getParameterValues("item_ids");
     		String message = "remove";
-    		LinkedList removedItems = new LinkedList();
+    		LinkedList<String> removedItems = new LinkedList<String>();
     		
-    		for (int j = 0; j < itemIDs.length; j++)
-    		{
-    			int i = Integer.parseInt(itemIDs[j]);
-    			removedItems.add(itemIDs[j]);
+                if (itemIDs == null)
+                {
+                        message = "none-removed";
+                }
+                else
+                {
+    	 		for (int j = 0; j < itemIDs.length; j++)
+	    		{
+    				int i = Integer.parseInt(itemIDs[j]);
+	    			removedItems.add(itemIDs[j]);
     			
-    			Item myItem = Item.find(context, i);
+    				Item myItem = Item.find(context, i);
     			
-    			// make sure item doesn't belong to this collection
-    			if (!myItem.isOwningCollection(myCollection))
-    			{
-    				myCollection.removeItem(myItem);
-    				try
+    				// make sure item doesn't belong to this collection
+    				if (!myItem.isOwningCollection(myCollection))
     				{
-    					IndexBrowse ib = new IndexBrowse(context);
-    					ib.itemChanged(myItem);
-    				}
-    				catch (BrowseException e)
-    				{
-    					log.error("caught exception: ", e);
-    					throw new ServletException(e);
+    					myCollection.removeItem(myItem);
+    					try
+    					{
+    						IndexBrowse ib = new IndexBrowse(context);
+                            ib.indexItem(myItem);
+    					}
+    					catch (BrowseException e)
+    					{
+    						log.error("caught exception: ", e);
+    						throw new ServletException(e);
+    					}
     				}
     			}
-    		}
+		}
     		
     		request.setAttribute("message", message);
     		request.setAttribute("collection", myCollection);
@@ -310,7 +221,7 @@ public class ItemMapServlet extends DSpaceServlet
     		// get item IDs to add
     		String[] itemIDs = request.getParameterValues("item_ids");
     		String message = "added";
-    		LinkedList addedItems = new LinkedList();
+    		LinkedList<String> addedItems = new LinkedList<String>();
     		
     		
     		if (itemIDs == null)
@@ -325,8 +236,7 @@ public class ItemMapServlet extends DSpaceServlet
     				
     				Item myItem = Item.find(context, i);
     				
-    				if (AuthorizeManager.authorizeActionBoolean(context,
-    						myItem, Constants.READ))
+    				if (AuthorizeManager.authorizeActionBoolean(context, myItem, Constants.READ))
     				{
     					// make sure item doesn't belong to this collection
     					if (!myItem.isOwningCollection(myCollection))
@@ -335,7 +245,7 @@ public class ItemMapServlet extends DSpaceServlet
     						try
     	    				{
     	    					IndexBrowse ib = new IndexBrowse(context);
-    	    					ib.itemChanged(myItem);
+    	    					ib.indexItem(myItem);
     	    				}
     	    				catch (BrowseException e)
     	    				{
@@ -366,7 +276,7 @@ public class ItemMapServlet extends DSpaceServlet
     		{
     			throw new ServletException("There is no configuration for itemmap.author.index");
     		}
-    		Map items = new HashMap();
+    		Map<Integer, Item> items = new HashMap<Integer, Item>();
     		try
     		{
     			BrowserScope bs = new BrowserScope(context);
@@ -390,21 +300,21 @@ public class ItemMapServlet extends DSpaceServlet
     			ItemIterator itr = myCollection.getItems();
                 try
                 {
-                    ArrayList idslist = new ArrayList();
+                    ArrayList<Integer> idslist = new ArrayList<Integer>();
                     while (itr.hasNext())
                     {
-                        idslist.add(new Integer(itr.nextID()));
+                        idslist.add(Integer.valueOf(itr.nextID()));
                     }
 
                     for (int i = 0; i < browseItems.length; i++)
                     {
                         // only if it isn't already in this collection
-                        if (!idslist.contains(new Integer(browseItems[i].getID())))
+                        if (!idslist.contains(Integer.valueOf(browseItems[i].getID())))
                         {
                             // only put on list if you can read item
                             if (AuthorizeManager.authorizeActionBoolean(context, browseItems[i], Constants.READ))
                             {
-                                items.put(new Integer(browseItems[i].getID()), browseItems[i]);
+                                items.put(Integer.valueOf(browseItems[i].getID()), browseItems[i]);
                             }
                         }
                     }
@@ -412,7 +322,9 @@ public class ItemMapServlet extends DSpaceServlet
                 finally
                 {
                     if (itr != null)
+                    {
                         itr.close();
+                    }
                 }
             }
     		catch (BrowseException e)
@@ -424,7 +336,7 @@ public class ItemMapServlet extends DSpaceServlet
     		request.setAttribute("collection", myCollection);
     		request.setAttribute("browsetext", name);
     		request.setAttribute("items", items);
-    		request.setAttribute("browsetype", new String("Add"));
+    		request.setAttribute("browsetype", "Add");
     		
     		jspPage = "itemmap-browse.jsp";
     		JSPManager.showJSP(request, response, jspPage);
@@ -438,7 +350,7 @@ public class ItemMapServlet extends DSpaceServlet
     		
     		// now find all imported items from that collection
     		// seemingly inefficient, but database should have this query cached
-            Map items = new HashMap();
+            Map<Integer, Item> items = new HashMap<Integer, Item>();
     		ItemIterator i = myCollection.getItems();
             try
             {
@@ -448,7 +360,7 @@ public class ItemMapServlet extends DSpaceServlet
 
                     if (myItem.isOwningCollection(targetCollection))
                     {
-                        Integer myKey = new Integer(myItem.getID());
+                        Integer myKey = Integer.valueOf(myItem.getID());
                         items.put(myKey, myItem);
                     }
                 }
@@ -456,14 +368,16 @@ public class ItemMapServlet extends DSpaceServlet
             finally
             {
                 if (i != null)
+                {
                     i.close();
+                }
             }
     		
             request.setAttribute("collection", myCollection);
     		request.setAttribute("browsetext", targetCollection
     				.getMetadata("name"));
     		request.setAttribute("items", items);
-    		request.setAttribute("browsetype", new String("Remove"));
+    		request.setAttribute("browsetype", "Remove");
     		
     		// show this page when we're done
     		jspPage = "itemmap-browse.jsp";
