@@ -1,41 +1,9 @@
-/*
- * JSPInitialQuestionsStep.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3705 $
- *
- * Date: $Date: 2009-04-11 19:02:24 +0200 (Sat, 11 Apr 2009) $
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.webui.submit.step;
 
@@ -46,9 +14,8 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-import org.apache.log4j.Logger;
-
 import org.dspace.app.util.DCInputsReader;
+import org.dspace.app.util.DCInputsReaderException;
 import org.dspace.app.util.SubmissionInfo;
 import org.dspace.app.webui.submit.JSPStep;
 import org.dspace.app.webui.submit.JSPStepManager;
@@ -65,7 +32,7 @@ import org.dspace.submit.step.InitialQuestionsStep;
  * <P>
  * This JSPStep class works with the SubmissionController servlet
  * for the JSP-UI
- * 
+ *
  * The following methods are called in this order:
  * <ul>
  * <li>Call doPreProcessing() method</li>
@@ -82,13 +49,13 @@ import org.dspace.submit.step.InitialQuestionsStep;
  * <li>Once all pages are complete, control is forwarded back to the
  * SubmissionController, and the next step is called.</li>
  * </ul>
- * 
+ *
  * @see org.dspace.app.webui.servlet.SubmissionController
  * @see org.dspace.app.webui.submit.JSPStep
  * @see org.dspace.submit.step.InitialQuestionsStep
- * 
+ *
  * @author Tim Donohue
- * @version $Revision: 3705 $
+ * @version $Revision: 5845 $
  */
 public class JSPInitialQuestionsStep extends JSPStep
 {
@@ -103,9 +70,6 @@ public class JSPInitialQuestionsStep extends JSPStep
 
     /** JSP which displays information to be reviewed during 'verify step' * */
     private static final String REVIEW_JSP = "/submit/review-init.jsp";
-    
-    /** log4j logger */
-    private static Logger log = Logger.getLogger(JSPInitialQuestionsStep.class);
 
     /**
      * Do any pre-processing to determine which JSP (if any) is used to generate
@@ -120,7 +84,7 @@ public class JSPInitialQuestionsStep extends JSPStep
      * If this step doesn't require user interaction OR you are solely using
      * Manakin for your user interface, then this method may be left EMPTY,
      * since all step processing should occur in the doProcessing() method.
-     * 
+     *
      * @param context
      *            current DSpace context
      * @param request
@@ -152,7 +116,7 @@ public class JSPInitialQuestionsStep extends JSPStep
      * If this step doesn't require user interaction OR you are solely using
      * Manakin for your user interface, then this method may be left EMPTY,
      * since all step processing should occur in the doProcessing() method.
-     * 
+     *
      * @param context
      *            current DSpace context
      * @param request
@@ -214,7 +178,7 @@ public class JSPInitialQuestionsStep extends JSPStep
 
     /**
      * Show the page which displays all the Initial Questions to the user
-     * 
+     *
      * @param context
      *            current DSpace context
      * @param request
@@ -223,7 +187,7 @@ public class JSPInitialQuestionsStep extends JSPStep
      *            the response object
      * @param subInfo
      *            the SubmissionInfo object
-     * 
+     *
      */
     private void showInitialQuestions(Context context,
             HttpServletRequest request, HttpServletResponse response,
@@ -233,12 +197,19 @@ public class JSPInitialQuestionsStep extends JSPStep
         // determine collection
         Collection c = subInfo.getSubmissionItem().getCollection();
 
-        // read configurable submissions forms data
-        DCInputsReader inputsReader = new DCInputsReader();
-
-        // load the proper submission inputs to be used by the JSP
-        request.setAttribute("submission.inputs", inputsReader.getInputs(c
-                .getHandle()));
+        try
+        {
+            // read configurable submissions forms data
+            DCInputsReader inputsReader = new DCInputsReader();
+             
+            // load the proper submission inputs to be used by the JSP
+            request.setAttribute("submission.inputs", inputsReader.getInputs(c
+                    .getHandle()));
+        }
+        catch (DCInputsReaderException e)
+        {
+            throw new ServletException(e);
+        }
 
         // forward to initial questions JSP
         JSPStepManager.showJSP(request, response, subInfo, INITIAL_QUESTIONS_JSP);
@@ -247,7 +218,7 @@ public class JSPInitialQuestionsStep extends JSPStep
     /**
      * Show the page which warns the user that by changing the answer to one of
      * these questions, some previous data may be deleted.
-     * 
+     *
      * @param context
      *            current DSpace context
      * @param request
@@ -276,9 +247,9 @@ public class JSPInitialQuestionsStep extends JSPStep
             IOException
     {
         // Verify pruning of extra bits
-        request.setAttribute("multiple.titles", new Boolean(multipleTitles));
-        request.setAttribute("published.before", new Boolean(publishedBefore));
-        request.setAttribute("multiple.files", new Boolean(multipleFiles));
+        request.setAttribute("multiple.titles", Boolean.valueOf(multipleTitles));
+        request.setAttribute("published.before", Boolean.valueOf(publishedBefore));
+        request.setAttribute("multiple.files", Boolean.valueOf(multipleFiles));
         request.setAttribute("button.pressed", UIUtil.getSubmitButton(request,
                 InitialQuestionsStep.NEXT_BUTTON));
 
@@ -293,7 +264,7 @@ public class JSPInitialQuestionsStep extends JSPStep
      * This Review JSP is loaded by the 'Verify' Step, in order to dynamically
      * generate a submission verification page consisting of the information
      * gathered in all the enabled submission steps.
-     * 
+     *
      * @param context
      *            current DSpace context
      * @param request
