@@ -1,41 +1,9 @@
-/*
- * JSPLicenseStep.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3705 $
- *
- * Date: $Date: 2009-04-11 19:02:24 +0200 (Sat, 11 Apr 2009) $
- *
- * Copyright (c) 2002-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.webui.submit.step;
 
@@ -55,12 +23,10 @@ import org.dspace.app.webui.submit.JSPStep;
 import org.dspace.app.webui.submit.JSPStepManager;
 import org.dspace.app.webui.util.JSPManager;
 import org.dspace.authorize.AuthorizeException;
-import org.dspace.content.Collection;
 import org.dspace.content.Item;
+import org.dspace.content.LicenseUtils;
 import org.dspace.content.WorkspaceItem;
-import org.dspace.core.ConfigurationManager;
 import org.dspace.core.Context;
-import org.dspace.core.I18nUtil;
 import org.dspace.core.LogManager;
 import org.dspace.license.CreativeCommons;
 import org.dspace.submit.step.LicenseStep;
@@ -94,7 +60,7 @@ import org.dspace.submit.step.LicenseStep;
  * @see org.dspace.submit.step.LicenseStep
  * 
  * @author Tim Donohue
- * @version $Revision: 3705 $
+ * @version $Revision: 5845 $
  */
 public class JSPLicenseStep extends JSPStep
 {
@@ -223,15 +189,11 @@ public class JSPLicenseStep extends JSPStep
             HttpServletResponse response, SubmissionInfo subInfo)
             throws SQLException, ServletException, IOException
     {
-        // determine collection & get license
-        Collection c = subInfo.getSubmissionItem().getCollection();
-        String license = c.getLicenseCollection();
-
-        if ((license == null) || license.equals(""))
-        {
-            // Fallback to site-wide default
-            license = ConfigurationManager.getLicenseText(I18nUtil.getDefaultLicense(context));
-        }
+        String license = LicenseUtils.getLicenseText(
+                context.getCurrentLocale(), subInfo.getSubmissionItem()
+                        .getCollection(),
+                subInfo.getSubmissionItem().getItem(), subInfo
+                        .getSubmissionItem().getSubmitter());
         request.setAttribute("license", license);
 
         JSPStepManager.showJSP(request, response, subInfo, LICENSE_JSP);
@@ -256,7 +218,7 @@ public class JSPLicenseStep extends JSPStep
         // Do we already have a CC license?
         Item item = subInfo.getSubmissionItem().getItem();
         boolean exists = CreativeCommons.hasLicense(context, item);
-        request.setAttribute("cclicense.exists", new Boolean(exists));
+        request.setAttribute("cclicense.exists", Boolean.valueOf(exists));
 
         JSPStepManager.showJSP(request, response, subInfo, CC_LICENSE_JSP);
     }
