@@ -1,35 +1,9 @@
-/*
- * Copyright (c) 2004-2005, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.didl;
 
@@ -97,25 +71,16 @@ public final class UUID implements Serializable
     public boolean equals(Object obj)
     {
         if(this == obj) // comparing to myself
+        {
             return true;
+        }
         if(obj instanceof UUID)
-            return equals((UUID)obj);
+        {
+            UUID uuid = (UUID)obj;
+            return (hi == uuid.hi && lo == uuid.lo);
+        }
         return false;
     }
-
-    /**
-     * Compare UUIDs 
-     * 
-     * @param uuid
-     *      the UUID to compare this UUID against
-     * 
-     * @return true or false
-     **/
-    public boolean equals(UUID uuid)
-    {
-        return (hi == uuid.hi && lo == uuid.lo);
-    }
-
     
     /**
      * Generate a hash for the UUID 
@@ -125,7 +90,7 @@ public final class UUID implements Serializable
      **/
     public int hashCode()
     {
-        return new Long(hi ^ lo).hashCode();
+        return Long.valueOf(hi ^ lo).hashCode();
     }
  
     
