@@ -1,41 +1,9 @@
-/*
- * ManageGroupsMain.java
+/**
+ * The contents of this file are subject to the license and copyright
+ * detailed in the LICENSE and NOTICE files at the root of the source
+ * tree and available online at
  *
- * Version: $Revision: 3705 $
- *
- * Date: $Date: 2009-04-11 19:02:24 +0200 (Sat, 11 Apr 2009) $
- *
- * Copyright (c) 2002, Hewlett-Packard Company and Massachusetts
- * Institute of Technology.  All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions are
- * met:
- *
- * - Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- *
- * - Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer in the
- * documentation and/or other materials provided with the distribution.
- *
- * - Neither the name of the Hewlett-Packard Company nor the name of the
- * Massachusetts Institute of Technology nor the names of their
- * contributors may be used to endorse or promote products derived from
- * this software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
- * ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
- * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
- * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
- * HOLDERS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
- * INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
- * BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
- * OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
- * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
- * TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
- * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
- * DAMAGE.
+ * http://www.dspace.org/license/
  */
 package org.dspace.app.xmlui.aspect.administrative.group;
 
@@ -56,6 +24,8 @@ import org.dspace.app.xmlui.wing.element.Row;
 import org.dspace.app.xmlui.wing.element.Table;
 import org.dspace.app.xmlui.wing.element.Text;
 import org.dspace.content.Collection;
+import org.dspace.content.Community;
+import org.dspace.content.DSpaceObject;
 import org.dspace.eperson.Group;
 
 /**
@@ -135,8 +105,8 @@ public class ManageGroupsMain extends AbstractDSpaceTransformer
 	/** The number of results to show on one page. */
 	private static final int PAGE_SIZE = 15;
 	
-	/** The maximum size of a collection name allowed */
-	private static final int MAX_COLLECTION_NAME = 30;
+    /** The maximum size of a collection or community name allowed */
+    private static final int MAX_COLLECTION_OR_COMMUNITY_NAME = 30;
 	
 	public void addPageMeta(PageMeta pageMeta) throws WingException
     {
@@ -149,7 +119,7 @@ public class ManageGroupsMain extends AbstractDSpaceTransformer
 	{
 		// Get all our parameters
 		String baseURL  = contextPath +"/admin/groups?administrative-continue="+knot.getId();
-		String query    = URLDecode(parameters.getParameter("query",""));
+		String query    = decodeFromURL(parameters.getParameter("query",""));
 		int page        = parameters.getParameterAsInteger("page",0);
 		int highlightID = parameters.getParameterAsInteger("highlightID",-1);
         int resultCount = Group.searchResultCount(context, query);
@@ -179,7 +149,9 @@ public class ManageGroupsMain extends AbstractDSpaceTransformer
         org.dspace.app.xmlui.wing.element.Item actionItem = actionsList.addItem();
         Text queryField = actionItem.addText("query");
         if (query != null)
-        	queryField.setValue(query);
+        {
+            queryField.setValue(query);
+        }
         queryField.setHelp(T_search_help);
         actionItem.addButton("submit_search").setValue(T_go);
         
@@ -202,9 +174,13 @@ public class ManageGroupsMain extends AbstractDSpaceTransformer
        
         	String nextURL = null, prevURL = null;
         	if (page < (resultCount / PAGE_SIZE))
-        		nextURL = baseURL+"&page="+(page+1);
+            {
+                nextURL = baseURL + "&page=" + (page + 1);
+            }
         	if (page > 0)
-        		prevURL = baseURL+"&page="+(page-1);
+            {
+                prevURL = baseURL + "&page=" + (page - 1);
+            }
         	
 			search.setSimplePagination(resultCount,firstIndex,lastIndex,prevURL, nextURL);
 		}
@@ -222,15 +198,19 @@ public class ManageGroupsMain extends AbstractDSpaceTransformer
         {
         	Row row;
         	if (group.getID() == highlightID)
-        		row = table.addRow(null,null,"highlight");
+            {
+                row = table.addRow(null, null, "highlight");
+            }
         	else
-        		row = table.addRow();
+            {
+                row = table.addRow();
+            }
         	
         	if (group.getID() > 1)
         	{
 	        	CheckBox select = row.addCell().addCheckBox("select_group");
-	        	select.setLabel(new Integer(group.getID()).toString());
-	        	select.addOption(new Integer(group.getID()).toString());
+	        	select.setLabel(Integer.valueOf(group.getID()).toString());
+	        	select.addOption(Integer.valueOf(group.getID()).toString());
         	}
         	else
         	{
@@ -246,26 +226,51 @@ public class ManageGroupsMain extends AbstractDSpaceTransformer
         	row.addCell().addContent(memberCount == 0 ? "-" : String.valueOf(memberCount));
         	
         	Cell cell = row.addCell();
-        	if (FlowGroupUtils.getCollectionId(group.getName()) > -1)
-        	{
-        		Collection collection = Collection.find(context, FlowGroupUtils.getCollectionId(group.getName()) );
-        		if (collection != null)
-        		{
-	        		String collectionName = collection.getMetadata("name");
+        	String groupName = group.getName();
+            DSpaceObject collectionOrCommunity = null;
+            String collectionOrCommunityName = null;
+            int id;
+            id = FlowGroupUtils.getCollectionId(groupName);
+            if (id > -1)
+            {
+                Collection collection = Collection.find(context, id);
+                if (collection != null)
+                {
+                    collectionOrCommunityName = collection.getMetadata("name");
+                    collectionOrCommunity = collection;
+                }
+            } 
+            else
+            {
+                id = FlowGroupUtils.getCommunityId(groupName);
+                if (id > -1)
+                {
+                    Community community = Community.find(context, id);
+                    if (community != null)
+                    {
+                        collectionOrCommunityName = community.getMetadata("name");
+                        collectionOrCommunity = community;
+                    }
+                }
+            }
+            if (collectionOrCommunity != null)
+            {
+                if (collectionOrCommunityName == null)
+                {
+                    collectionOrCommunityName = "";
+                }
+                else if (collectionOrCommunityName.length() > MAX_COLLECTION_OR_COMMUNITY_NAME)
+                {
+                    collectionOrCommunityName = collectionOrCommunityName.substring(0, MAX_COLLECTION_OR_COMMUNITY_NAME - 3) + "...";
+                }
 	        		
-	        		if (collectionName == null)
-	        			collectionName = "";
-	        		else if (collectionName.length() > MAX_COLLECTION_NAME)
-	        			collectionName = collectionName.substring(0,MAX_COLLECTION_NAME-3) + "...";
+                cell.addContent(collectionOrCommunityName + " ");
 	        		
-	        		cell.addContent(collectionName+" ");
-	        		
-	        		Highlight highlight = cell.addHighlight("fade");
-	        		
-	        		highlight.addContent("[");
-	        		highlight.addXref(contextPath+"/handle/"+collection.getHandle(), T_collection_link);
-	        		highlight.addContent("]");
-        		}
+	        	Highlight highlight = cell.addHighlight("fade");
+
+                highlight.addContent("[");
+                highlight.addXref(contextPath+"/handle/"+collectionOrCommunity.getHandle(), T_collection_link);
+	        	highlight.addContent("]");
         	}
         	
         }
